--- a/WebApplication1/Views/Home/UserPage.cshtml
+++ b/WebApplication1/Views/Home/UserPage.cshtml
@@ -15,7 +15,7 @@
 
             <div style="margin: 0;" class=" row profile hidden-xs">
                 <div class="col-md-3" id="friendPage">
-                    <div class="profile-sidebar">
+                    <div style="right:0;" class="profile-sidebar">
                         <!-- SIDEBAR USERPIC -->
                         <div class="profile-userpic">
                             <img src="@ViewBag.userImage" style="width:150px; height: 150px;"
@@ -111,7 +111,6 @@
                         <hr class="footerHR" />
                         <a href=""><i id="thumbsUp" class="glyphicon glyphicon-thumbs-up"></i></a>
                         <a href=""><i id="thumbsDown" class="glyphicon glyphicon-thumbs-down"></i></a>
-                    </div>
                     <div class="likes">
                         +1
                     </div>
@@ -123,6 +122,7 @@
                     {
                         <a href=""><i id="postFile" style="color: lightgray; pointer-events: none; cursor: default;" class="glyphicon glyphicon-paperclip"></i></a>
                     }                  
+                    </div>
                 </div>
             }
         </div>
