--- a/WebApplication1/Content/frndly.css
+++ b/WebApplication1/Content/frndly.css
@@ -82,7 +82,6 @@ hr.star-primary {
 main {
     text-align: center;
     color: #fff;
-    background: lightsteelblue;
 }
 
     main .container {
@@ -351,7 +350,9 @@ footer {
 /*PROFILE*/
 
 body {
-    background: #F1F3FA;
+    /*background: lightsteelblue;*/
+       background-image: url("../Content/Images/image.png");
+
 }
 
 /* Profile container */
@@ -551,7 +552,7 @@ aside #myfront {
 
 #loginDrop {
     padding: 17px;
-    margin-top: 18px;
+    margin-top: 19px;
     padding-bottom: 10px;
 }
 
@@ -573,7 +574,7 @@ aside #myfront {
 .profile-sidebar {
     min-height: 800px;
     max-width: 270px;
-    min-width: 270px;
+    width: 20%;
     position: fixed;
     z-index: 1;
 }
@@ -748,16 +749,36 @@ h4.formLabel{
   width: 38%;
   min-height: 240px;
   max-height: 240px;
-  border: 1px solid lightgray;
   margin-top: 40px;
+  position: relative;
+  border: 1px solid gray;
+  box-shadow: 2px 2px 2px gray;
+}
+
+@media (max-width: 1200px) {
+
+    .post{
+      margin-right: 10px;
+      background-color: white;
+      color: black;
+      width: 65%;
+      min-height: 240px;
+      max-height: 240px;
+      margin-top: 40px;
+      position: relative;
+      border: 1px solid gray;
+      box-shadow: 2px 2px 2px gray;
+    }
+
 }
 
 .pageTitle{
-      font-size: 30px;
-  text-align: left;
-  text-transform: uppercase;
-  color: rgb(106, 96, 157);
-  padding: 40px 0px 0px 0px;
+    font-size: 40px;
+    text-align: left;
+    text-shadow: 0px 0px 5px white;
+    text-transform: uppercase;
+    color: rgb(106, 96, 157);
+    padding: 40px 0px 0px 0px;
 }
 
 .searchName{
@@ -789,6 +810,9 @@ h4.formLabel{
 #searchBtn{
       margin-top: 16px;
   height: 35px;
+  border-radius: 0;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 #searchBtn:hover, #searchBtn:focus{
@@ -800,7 +824,7 @@ h4.formLabel{
 #friendPage{
 
     float: right;
-     margin-top: -93px;
+     margin-top: -108px;
   margin-right: 220px;
 }
 
@@ -836,7 +860,8 @@ h4.formLabel{
 }
 
 .postHR{
-    margin-top: 18px;
+   margin: 0;
+  clear: both;
 }
 
 .postLink, .postLink:hover{
@@ -845,19 +870,33 @@ h4.formLabel{
 }
 
 .postDate{
-    max-width: 164px;
-  margin-left: 315px;
-    padding-top: 18px;
-  font-size: 12px;
+     max-width: 164px;
+  margin-right: 10px;
+  float: right;
+  padding-top: 18px;
+  font-size: 13px;
+}
+
+.postHead{
+        max-height: 51px;
+  overflow: hidden;
 }
 
 .postBody{
-    min-height: 136px;
-  max-height: 115px;
-  overflow: auto;
-  padding: 11px;
+     overflow: auto;
+  padding: 10px;
   text-align: left;
-  margin-top: -20px;
+  position: absolute;
+  bottom: 25px;
+  width: 100%;
+  top: 50px;
+}
+
+.postFooter{
+      height: 25px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 #thumbsUp{
@@ -881,7 +920,7 @@ h4.formLabel{
 }
 
 .footerHR{
-    margin-bottom: 0;
+  margin: 0;
 }
 
 .likes{
@@ -946,4 +985,8 @@ h4.formLabel{
   padding: 80px;
     margin-top: 200px;
 
+}
+
+.navbar-default{
+    background-color: rgba(119, 136, 153, 0.7);
 }
