--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>frndly</title>
+    <link rel="shortcut icon" href="~/Content/Images/favicon.ico" />
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     @*<link href="css/bootstrap.css" rel="stylesheet">*@
