--- a/WebApplication1/Views/Home/UserPage.cshtml
+++ b/WebApplication1/Views/Home/UserPage.cshtml
@@ -15,7 +15,7 @@
 
             <div style="margin: 0;" class=" row profile hidden-xs">
                 <div class="col-md-3" id="friendPage">
-                    <div style="right:0;" class="profile-sidebar">
+                    <div id="friendProfile" class="profile-sidebar">
                         <!-- SIDEBAR USERPIC -->
                         <div class="profile-userpic">
                             <img src="@ViewBag.userImage" style="width:150px; height: 150px;"
