--- a/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
+            <li><a id="logout" href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
         </ul>
     }
 }
