--- a/WebApplication1/Views/Home/Search.cshtml
+++ b/WebApplication1/Views/Home/Search.cshtml
@@ -14,7 +14,7 @@
             @if(!@Model.searchResult.Any()){
 
                 <div class="post">
-                    <p style="margin-top: 23%;">No Results!</p> 
+                    <p class="noPosts">No Results!</p> 
                 </div>
             }
             
