--- a/WebApplication1/Views/Home/UserPage.cshtml
+++ b/WebApplication1/Views/Home/UserPage.cshtml
@@ -18,7 +18,7 @@
                     <div id="friendProfile" class="profile-sidebar">
                         <!-- SIDEBAR USERPIC -->
                         <div class="profile-userpic">
-                            <img src="@ViewBag.userImage" style="width:150px; height: 150px;"
+                            <img src="@ViewBag.userImage" style="width: 150px; height: 150px; border: 1px solid rgb(177, 159, 251);"
                                  class="img-responsive" alt="" />
                         </div>
                         <!-- END SIDEBAR USERPIC -->
@@ -29,8 +29,8 @@
                                 @ViewBag.userLastName
                             </div>
                             <!--<div class="profile-usertitle-job">
-                        Developer
-                    </div>-->
+                                Developer
+                            </div>-->
                         </div>
                         <!-- END SIDEBAR USER TITLE -->
                         <div class="profile-userbuttons">
@@ -56,7 +56,7 @@
                                 <li>
                                     <a class="btn showdetails" data-toggle="collapse" data-target="#viewUserFriends">
                                         <i class="glyphicon glyphicon-user"></i>
-                                        Friendships&nbsp;&nbsp;&nbsp;&nbsp;@ViewBag.Friends.Count
+                                        Friendships&nbsp;&nbsp;·&nbsp;&nbsp;@ViewBag.Friends.Count
                                     </a>
                                     <p class="collapse" id="viewUserFriends" style="color: black;">
                                         @foreach (var friend in ViewBag.Friends)
@@ -90,39 +90,48 @@
                     </div>
                 </div>
             </div>
-            @for (int i = 0; i < ViewBag.Posts.Count; i++)
+            @if (ViewBag.Posts.Count > 0)
+            {
+                for (int i = 0; i < ViewBag.Posts.Count; i++)
+                {
+                    <div class="post">
+                        <div class="postHead">
+                            <img class="postImage" src="@ViewBag.ImageMap[ViewBag.Users[i]]" />
+                            <p class="postName">
+                                <a class="postLink" href=@Url.Action("UserPage", "Home", new { userName = ViewBag.Users[i].UserName })>
+                                    @ViewBag.Users[i].FirstName
+                                    @ViewBag.Users[i].LastName
+                                </a>
+                            </p>
+                            <p title="@ViewBag.Posts[i].DateTime" class="postDate">@Util.TimeAgo(ViewBag.Posts[i].DateTime)</p>
+                            <hr class="postHR" />
+                        </div>
+                        <div class="postBody">
+                            @ViewBag.Posts[i].PostContent
+                        </div>
+                        <div class="postFooter">
+                            <hr class="footerHR" />
+                            <a href=""><i id="thumbsUp" class="glyphicon glyphicon-thumbs-up"></i></a>
+                            <a href=""><i id="thumbsDown" class="glyphicon glyphicon-thumbs-down"></i></a>
+                            <div class="likes">
+                                +1
+                            </div>
+                            @if (ViewBag.Posts[i].PostFile != null)
+                            {
+                                <a href="#" data-toggle="modal" data-target="#ViewPictureModal" data-picture-id="@ViewBag.PostPictureMap[ViewBag.Posts[i]]"><i id="postFile" style="color: black;" class="glyphicon glyphicon-paperclip"></i></a>
+                            }
+                            else
+                            {
+                                <a href=""><i id="postFile" style="color: lightgray; pointer-events: none; cursor: default;" class="glyphicon glyphicon-paperclip"></i></a>
+                            }
+                        </div>
+                    </div>
+                }
+            }
+            else
             {
                 <div class="post">
-                    <div class="postHead">
-                        <img class="postImage" src="@ViewBag.ImageMap[ViewBag.Users[i]]" />
-                        <p class="postName">
-                            <a class="postLink" href=@Url.Action("UserPage", "Home", new { userName = ViewBag.Users[i].UserName })>
-                                @ViewBag.Users[i].FirstName
-                                @ViewBag.Users[i].LastName
-                            </a>
-                        </p>
-                        <p title="@ViewBag.Posts[i].DateTime" class="postDate">@Util.TimeAgo(ViewBag.Posts[i].DateTime)</p>
-                        <hr class="postHR" />
-                    </div>
-                    <div class="postBody">
-                        @ViewBag.Posts[i].PostContent
-                    </div>
-                    <div class="postFooter">
-                        <hr class="footerHR" />
-                        <a href=""><i id="thumbsUp" class="glyphicon glyphicon-thumbs-up"></i></a>
-                        <a href=""><i id="thumbsDown" class="glyphicon glyphicon-thumbs-down"></i></a>
-                    <div class="likes">
-                        +1
-                    </div>
-                    @if (ViewBag.Posts[i].PostFile != null)
-                    {
-                        <a href="#" data-toggle="modal" data-target="#ViewPictureModal" data-picture-id="@ViewBag.PostPictureMap[ViewBag.Posts[i]]"><i id="postFile" style="color: black;" class="glyphicon glyphicon-paperclip"></i></a>
-                    }
-                    else
-                    {
-                        <a href=""><i id="postFile" style="color: lightgray; pointer-events: none; cursor: default;" class="glyphicon glyphicon-paperclip"></i></a>
-                    }                  
-                    </div>
+                    <p class="noPosts">@ViewBag.userFirstName has no Stories</p>
                 </div>
             }
         </div>
@@ -137,25 +146,3 @@
         </div>
     </div>
 </div>
-
-<script>
-    $('#ViewPictureModal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget)
-        var image = button.data('picture-id')
-
-        var modal = $(this)
-        modal.find('.picture').attr("src", image)
-    })
-
-    $('#EditPostModal').on('show.bs.modal', function (event) {
-
-    })
-
-    $('#deletePost').click(function () {
-        var url = $(this).data('url');
-
-        $.get(url, function (data) {
-            $('#deletePostModal').html(data);
-        });
-    });
-</script>
