--- a/WebApplication1/Content/frndly.css
+++ b/WebApplication1/Content/frndly.css
@@ -919,7 +919,7 @@ h4.formLabel{
     color:rgb(177, 159, 251);
 }
 #thumbsDown:hover{
-    color:rgb(215, 111, 111);;
+    color:rgb(215, 111, 111);
 }
 
 .footerHR{
